# ee205_animal_farm

./: .clang-tidy  .gitignore  CMakeLists.txt  STATISTICS.md  main.cpp
.doxygen/: CMake_Doxygen.txt
src/: main.cpp
src/Utility/: Trim.cpp  Trim.h
tests/: test_Trim.cpp
